[refactor] GeminiPlayerNameAuditor Fail-Safe 전환 및 구조 개선
- Fail-Open → Fail-Safe: 전체 파싱 실패 시 InfrastructureException 던져 @Retry 위임,
  항목 파싱 실패 시 빈 리스트 skip 대신 PENDING 상태로 포함
- response.text() null 체크 추가
- responseSchema + systemInstruction 적용으로 응답 구조 강제 및 지시사항 분리
- PlayerNameAuditPromptTemplate 분리: 정적 SYSTEM_INSTRUCTION과 동적 buildUserMessage() 책임 분리
- @PostConstruct 제거: 메트릭 변수를 생성자에서 final로 초기화
- PlayerNameAuditErrorCode를 domain/audit으로 이동, 도메인 용어로 명명

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>